--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </h1>
     <p>cambio en git</p>
     <p>primer commit</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et tempora quia non delectus, dolorem iusto corrupti architecto ab deleniti officia magni enim deserunt quasi reiciendis voluptatum porro adipisci eos? Id!</p>
 
     <img src="batman.png" />
 
